--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">VMovie</string>
+    <string name="home">首页</string>
+    <string name="series">系列</string>
+    <string name="backstage">幕后</string>
+    <string name="user">我的</string>
+    <string name="search">搜索</string>
+    <string name="setting">设置</string>
+    <string name="about">关于</string>
 </resources>
